[workspace]
members  = [ "cw-vault-standard" ]
resolver = "2"

[workspace.package]
authors    = [ "Pacman <pacman@apollo.farm>", "Sturdy <sturdy@apollo.farm>" ]
edition    = "2021"
homepage   = "https://github.com/apollodao/cw-vault-standard/"
keywords   = [ "cosmos", "cosmwasm" ]
license    = "Apache-2.0"
repository = "https://github.com/apollodao/cw-vault-standard/"

[workspace.dependencies]
cosmwasm-schema                = { version = "2.1.3" }
cosmwasm-std                   = { version = "2.1.0", features = [ "abort", "cosmwasm_1_2", "cosmwasm_1_3", "cosmwasm_1_4", "cosmwasm_2_0", "iterator", "stargate" ] }
cw-storage-plus                = { version = "2.0.0" }
cw-utils                       = { version = "2.0.0" }
cw-vault-standard              = { version = "2.0.0", path = "./cw-vault-standard" }
cw-vault-standard-test-helpers = { version = "2.0.0", path = "./test-helpers" }
cw2                            = { version = "2.0.0" }
cw20                           = { version = "2.0.0" }
mars-owner                     = "2.0.0"
schemars                       = "0.8.11"
serde                          = { version = "1.0.152", default-features = false, features = [ "derive" ] }

# dev dependencies
proptest = "1.2.0"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = "abort"
rpath            = false
