[package]
authors       = { workspace = true }
description   = "A standard interface for tokenized vaults written in CosmWasm"
documentation = "https://docs.rs/cw-vault-standard"
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
name          = "cw-vault-standard"
readme        = "README.md"
repository    = { workspace = true }
version       = "2.0.0"

[features]
cw4626       = [ "cw20" ]
default      = [  ]
force-unlock = [  ]
keeper       = [  ]
lockup       = [ "cw-utils" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-utils        = { workspace = true, optional = true }
cw20            = { workspace = true, optional = true }
schemars        = { workspace = true }
serde           = { workspace = true }
